[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui/panels/InfoCard.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/roboto_bold_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/battle/ui/actions/CommanderActionBar.gd" type="Script" id=3]

[node name="CommanderActionBar" type="VBoxContainer"]
anchor_right = 1.0
margin_bottom = 110.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoCard" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
margin_right = 360.0
margin_bottom = 110.0

[node name="Actions" type="HBoxContainer" parent="."]
margin_top = 114.0
margin_right = 360.0
margin_bottom = 139.0
custom_constants/separation = 16
alignment = 1

[node name="Cancel" type="Button" parent="Actions"]
margin_left = 20.0
margin_right = 116.0
margin_bottom = 25.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Cancel"

[node name="EndTurn" type="Button" parent="Actions"]
margin_left = 132.0
margin_right = 228.0
margin_bottom = 25.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 2 )
text = "End Turn"

[node name="Forfeit" type="Button" parent="Actions"]
margin_left = 244.0
margin_right = 340.0
margin_bottom = 25.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Forfeit"

[connection signal="pressed" from="Actions/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Actions/EndTurn" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="Actions/Forfeit" to="." method="_on_forfeit_pressed"]
